// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ltr article (pidgin) with most read correctly 1`] = `
.emotion-9 {
  width: 100%;
}

@supports (display:grid) {
  .emotion-9 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-9 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-9 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

@media (max-width:24.9375rem) {
  .emotion-197 {
    margin: 0 0.5rem 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-197 {
    margin: 0 1rem 2rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-197 {
    margin: 0 1rem 2.5rem;
  }
}

@media (min-width:80rem) {
  .emotion-197 {
    width: 100%;
    margin: 0 auto 1.5rem;
    padding: 0 1rem;
    max-width: 80rem;
  }
}

.emotion-22 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-22 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-22 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-22 {
    margin-bottom: 1rem;
  }
}

.emotion-11 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-11 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-11 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-19 {
  margin: 0;
  padding: 0;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-15 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-195 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat(10,auto);
}

@supports (display:grid) {
  .emotion-195 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:37.5rem) {
  .emotion-195 {
    grid-template-rows: repeat( 5,auto );
  }
}

@media (min-width:80rem) {
  .emotion-195 {
    grid-auto-flow: row;
  }
}

.emotion-39 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width:14.9375rem) {
  .emotion-39 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-39 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-39 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-39 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-39 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-39 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-39 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:80rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width:14.9375rem) {
  .emotion-26 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-26 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-26 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-26 {
    min-width: 4rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-26 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-26 {
      min-width: 2rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-26 {
    min-width: 2rem;
  }
}

.emotion-34 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-34 {
    padding-right: 0;
  }
}

.emotion-32 {
  padding-top: 0.5rem;
}

@media (max-width:14.9375rem) {
  .emotion-43 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-43 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-43 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-43 {
    min-width: 4rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-43 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-43 {
      min-width: 2rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-43 {
    min-width: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-94 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-94 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-94 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-94 {
    min-width: 4rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-94 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-94 {
      min-width: 2rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-94 {
    min-width: 4rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-111 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-111 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-111 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-111 {
    min-width: 4rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-111 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-111 {
      min-width: 4rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-111 {
    min-width: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-128 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-128 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-128 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-128 {
    min-width: 4rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-128 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-128 {
      min-width: 4rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-128 {
    min-width: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-179 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-179 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-179 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-179 {
    min-width: 4rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-179 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-179 {
      min-width: 4rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-179 {
    min-width: 4rem;
  }
}

.emotion-0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

.emotion-0:focus {
  outline: none;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    padding-right: 2.5rem;
  }
}

.emotion-13 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-13 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    padding-right: 1rem;
  }
}

.emotion-24 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-24 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-24 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-28 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-28:hover,
.emotion-28:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-28:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width:25rem) {
  .emotion-28 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

@media (min-width:20rem) and (max-width:37.4375rem) {
    .emotion-28 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
}

@media (min-width:37.5rem) {
    .emotion-28 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
}
}

.emotion-30 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-30 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-30 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    role="main"
  >
    <div
      class="emotion-8 emotion-9 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-2 emotion-3"
        dir="ltr"
      >
        <h1
          class="emotion-0 emotion-1"
          id="content"
          tabindex="-1"
        >
          Article Headline in Pidgin
        </h1>
      </div>
      <div
        class="emotion-6 emotion-3"
        dir="ltr"
      >
        <p
          class="emotion-4 emotion-5"
        >
          A paragraph in Pidgin.
        </p>
      </div>
    </div>
  </main>
  <section
    aria-labelledby="Most-Read"
    class=" emotion-197 emotion-198"
    data-e2e="most-read"
    role="region"
  >
    <div
      class="emotion-21 emotion-22 emotion-23"
    >
      <div
        class="emotion-11 emotion-12"
      />
      <h2
        class="emotion-19 emotion-20"
      >
        <span
          class="emotion-17 emotion-18"
        >
          <span
            class="emotion-15 emotion-16"
          >
            <span
              class="emotion-13 emotion-14"
              dir="ltr"
              id="Most-Read"
            >
              De one we dem de read well well
            </span>
          </span>
        </span>
      </h2>
    </div>
    <ol
      class="emotion-194 emotion-195 emotion-3"
      dir="ltr"
      role="list"
    >
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-26 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              1
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-46729879"
            >
              Public Holidays wey go happun for 2019
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-05-21"
              >
                De one we dem update for: 21st May 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-43 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              2
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-50304653"
            >
              Liberia banks don run out of money
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-05"
              >
                De one we dem update for: 5th November 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-26 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              3
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-50298882"
            >
              Why Oscars disqualify Genevieve Nnaji 'Lionheart' film
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-05"
              >
                De one we dem update for: 5th November 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-43 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              4
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-50315150"
            >
              Ghana opposition NDC list 51 family and friends inside Akufo-Addo govment
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                De one we dem update for: 6th November 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-94 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              5
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-50315157"
            >
              How Balogun market fire kill Policeman for Lagos
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                De one we dem update for: 6th November 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-111 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              6
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-50093818"
            >
              Labour, FG finally agree minimum wage salary adjustment
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-10-18"
              >
                De one we dem update for: 18th October 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-128 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              7
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-50187218"
            >
              Naira Marley na 'Bad Influence'?
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-10-25"
              >
                De one we dem update for: 25th October 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-111 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              8
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-48347911"
            >
              Tins you suppose know about Naira Marley
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-05-23"
              >
                De one we dem update for: 23rd May 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-128 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              9
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/sport-50312710"
            >
              Golden Eaglets crash out of Fifa U17 World Cup
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                De one we dem update for: 6th November 2019
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="ltr"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-179 emotion-27"
            dir="ltr"
          >
            <span
              class="emotion-24 emotion-25"
            >
              10
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="ltr"
          >
            <a
              class="emotion-28 emotion-29"
              href="/pidgin/tori-42945173"
            >
              Tiger nut drink fit wake up your sex drive - Nutritionist
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-05-21"
              >
                De one we dem update for: 21st May 2019
              </time>
            </div>
          </div>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`should render a news article correctly 1`] = `
.emotion-9 {
  width: 100%;
}

@supports (display:grid) {
  .emotion-9 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-9 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-9 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

.emotion-0:focus {
  outline: none;
}

@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    padding-right: 2.5rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    role="main"
  >
    <div
      class="emotion-8 emotion-9 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-2 emotion-3"
        dir="ltr"
      >
        <h1
          class="emotion-0 emotion-1"
          id="content"
          tabindex="-1"
        >
          Article Headline
        </h1>
      </div>
      <div
        class="emotion-6 emotion-3"
        dir="ltr"
      >
        <p
          class="emotion-4 emotion-5"
        >
          A paragraph.
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`should render a rtl article (persian) with most read correctly 1`] = `
.emotion-9 {
  width: 100%;
}

@supports (display:grid) {
  .emotion-9 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-9 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-9 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-9 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:24.9375rem) {
  .emotion-197 {
    margin: 0 0.5rem 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-197 {
    margin: 0 1rem 2rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-197 {
    margin: 0 1rem 2.5rem;
  }
}

@media (min-width:80rem) {
  .emotion-197 {
    width: 100%;
    margin: 0 auto 1.5rem;
    padding: 0 1rem;
    max-width: 80rem;
  }
}

.emotion-22 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-22 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-22 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-22 {
    margin-bottom: 1rem;
  }
}

.emotion-19 {
  margin: 0;
  padding: 0;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-15 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-195 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat(10,auto);
}

@supports (display:grid) {
  .emotion-195 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-195 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:37.5rem) {
  .emotion-195 {
    grid-template-rows: repeat( 5,auto );
  }
}

@media (min-width:80rem) {
  .emotion-195 {
    grid-auto-flow: row;
  }
}

.emotion-39 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width:14.9375rem) {
  .emotion-39 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-39 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-39 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-39 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-39 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-39 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-39 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:80rem) {
    .emotion-39 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.emotion-32 {
  padding-top: 0.5rem;
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-2 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

.emotion-0:focus {
  outline: none;
}

@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-right: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-right: 40%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    padding-right: 2.5rem;
  }
}

.emotion-11 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-11 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-11 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.625rem;
  }
}

.emotion-13 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-13 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    padding-left: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-26 {
    min-width: 1rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-26 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-26 {
      min-width: 1.5rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-26 {
    min-width: 1.5rem;
  }
}

.emotion-24 {
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-24 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-24 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-34 {
  padding-top: 0.375rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-34 {
    padding-left: 0;
  }
}

.emotion-28 {
  font-size: 1rem;
  line-height: 1.625rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-28 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-28 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.emotion-28:hover,
.emotion-28:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-28:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width:25rem) {
  .emotion-28 {
    font-size: 1.375rem;
    line-height: 1.75rem;
  }

@media (min-width:20rem) and (max-width:37.4375rem) {
    .emotion-28 {
      font-size: 1.5rem;
      line-height: 2rem;
    }
}

@media (min-width:37.5rem) {
    .emotion-28 {
      font-size: 1.625rem;
      line-height: 2.125rem;
    }
}
}

.emotion-30 {
  font-size: 1rem;
  line-height: 1.25rem;
  color: #6E6E73;
  display: block;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-30 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-30 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-43 {
    min-width: 1rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-43 {
    min-width: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-43 {
    min-width: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-43 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-43 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-43 {
      min-width: 1.5rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-43 {
    min-width: 1.5rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-94 {
    min-width: 1rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-94 {
    min-width: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-94 {
    min-width: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-94 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-94 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-94 {
      min-width: 1.5rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-94 {
    min-width: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-111 {
    min-width: 1rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-111 {
    min-width: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-111 {
    min-width: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-111 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-111 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-111 {
      min-width: 2rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-111 {
    min-width: 1.5rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-128 {
    min-width: 1rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-128 {
    min-width: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-128 {
    min-width: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-128 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-128 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-128 {
      min-width: 2rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-128 {
    min-width: 1.5rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-179 {
    min-width: 1rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-179 {
    min-width: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-179 {
    min-width: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-179 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-179 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
@media (min-width:37.5rem) {
    .emotion-179 {
      min-width: 2rem;
    }
}
}

@media (min-width:80rem) {
  .emotion-179 {
    min-width: 2rem;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    role="main"
  >
    <div
      class="emotion-8 emotion-9 emotion-3"
      dir="rtl"
    >
      <div
        class="emotion-2 emotion-3"
        dir="rtl"
      >
        <h1
          class="emotion-0 emotion-1"
          id="content"
          tabindex="-1"
        >
          سرصفحه مقاله
        </h1>
      </div>
      <div
        class="emotion-6 emotion-3"
        dir="rtl"
      >
        <p
          class="emotion-4 emotion-5"
        >
          یک پاراگراف.
        </p>
      </div>
    </div>
  </main>
  <section
    aria-labelledby="Most-Read"
    class=" emotion-197 emotion-198"
    data-e2e="most-read"
    role="region"
  >
    <div
      class="emotion-21 emotion-22 emotion-23"
    >
      <div
        class="emotion-11 emotion-12"
      />
      <h2
        class="emotion-19 emotion-20"
      >
        <span
          class="emotion-17 emotion-18"
        >
          <span
            class="emotion-15 emotion-16"
          >
            <span
              class="emotion-13 emotion-14"
              dir="rtl"
              id="Most-Read"
            >
              پربیننده‌ترین‌ها
            </span>
          </span>
        </span>
      </h2>
    </div>
    <ol
      class="emotion-194 emotion-195 emotion-3"
      dir="rtl"
      role="list"
    >
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-26 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۱
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/world-50317704"
            >
              توافق با جدایی‌طلبان یمن؛ ایران اعتراض کرد، سازمان ملل استقبال
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-43 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۲
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/iran-50319870"
            >
              فراخوان آذری جهرمی برای مناظره اینستاگرامی - زرآبادی: در مجلس مناظره کنیم
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-26 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۳
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/world-50320610"
            >
              ترکیه: همسر ابوبکر بغدادی را 'دستگیر کردیم'
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-43 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۴
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/world-50316456"
            >
              غنی سازی مجدد در فردو: مکرون اقدام ایران را 'عمیقا مایه نگرانی' خواند
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-94 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۵
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/magazine-50249226"
            >
              دوازده دلیل حکمرانی حشرات: سوسک می‌تواند دو هفته بدون سر زنده بماند
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-111 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۶
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/world-50317700"
            >
              انتخابات ایالتی آمریکا؛ دموکرات‌ها از جمهوری‌خواهان پیش افتادند
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-128 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۷
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/sport-50322486"
            >
              عراق اردن را به عنوان میزبان بازی با ایران معرفی کرد
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-111 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۸
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/iran-features-50310665"
            >
              آیا تهران بازی هسته ای را به هم می‌زند؟
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-128 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۹
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/world-50316450"
            >
              آمریکا: دو ایرانی اتهام جمع‌آوری اطلاعات علیه سازمان مجاهدین در خاک آمریکا را پذیرفتند
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
      <li
        class="emotion-38 emotion-39 emotion-3"
        dir="rtl"
        role="listitem"
      >
        <div
          class="emotion-36 emotion-37"
        >
          <div
            class="emotion-179 emotion-27"
            dir="rtl"
          >
            <span
              class="emotion-24 emotion-25"
            >
              ۱۰
            </span>
          </div>
          <div
            class="emotion-34 emotion-35"
            dir="rtl"
          >
            <a
              class="emotion-28 emotion-29"
              href="/persian/sport-50318030"
            >
              فوتبال ایران و عراق؛ ایران: امن است بازی می‌کنیم، فیفا: ناامن است بازی نکنید
            </a>
            <div
              class="emotion-32 emotion-33"
            >
              <time
                class="emotion-30 emotion-31"
                datetime="2019-11-06"
              >
                به روز شده در ۶ نوامبر ۲۰۱۹
              </time>
            </div>
          </div>
        </div>
      </li>
    </ol>
  </section>
</div>
`;
